implemented the business model and got ready to be in public.